# BabyLM

./: .aichignore  .cursorignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FRONTEND_INTEGRATION_FIXES.md  GyroSI Baby ML.spec  Makefile  README.md  TODO_LEB128_INTEGRATION.md  TODO_REFACTOR.md  baby.sh  babylm.py  babylm_test_results.json  basedpyrightconfig.json  candidate_sanity_check.py  check_gyro_format.py  check_sep_coverage.py  cleanup_test_data.py  debug_address_diversity.py  debug_anchor_test.py  debug_atlas_acceptance.py  debug_corrected_emission.py  debug_domain_analysis.py  debug_emission.py  debug_emit.py  debug_exon_calculation.py  debug_generation.py  debug_introns.py  debug_learned_tokens.py  debug_learning.py  debug_orbit_diversity.py  debug_orbit_sizes.py  debug_ordering_keys.py  debug_path_memory.py  debug_paths.py  debug_recovery.py  debug_roles.py  (+33 more)
.github/workflows/: build-assets.yml
.kaggle/: kaggle.json
app/: app.py  config.py  main.py  state.py
app/components/: __init__.py  bottom_bar.py  common.py  input_area.py  message_area.py  thread_list.py  top_bar.py
app/services/: message_store.py
app/utils/: __init__.py  animations.py  theme.py
app/views/: __init__.py  chat_view.py  dev_view.py  settings_view.py
baby/: __init__.py  baby_preferences.json  chat.py  chat_simple.py  config.json  contracts.py  generate.py  governance.py  inference.py  information.py  intelligence.py  kernel.py  kernel_latest.py  kernel_plus.py  knowledge_test.py  maintenance.py  minimal_test.py  policies.py  test_output.txt  tokenizer.py  types.py
baby-legacy/: contracts-legacy.py  governance.py  information-legacy.py  intelligence-legacy.py  policies-legacy.py
baby/constants/: atlas_builder.py  frozen_channels.py  harmony_tokens.py
baby/kernel/: bitops.py  bootstrap.py  governance.py  gyro_core.py
baby/responses_api/: api_server.py  events.py  response_types.py  serve.py  utils.py
config/: extensions.config.yaml  gyro_config.yaml
core/: g1.py  g3.py  g5.py
docs/: CORE-SPECS-01-02-03-04.md  Guides.md  Theory.md  api.rst  api_reference.md  architecture.rst  conf.py  cryptography.md  development.rst  development.txt  files.txt  flet.md  guides.txt  gyroguides.md  index.rst  overview.rst  overview.txt  source_core.md  storage.md  structure.md  👶 Overview.md  🔒 [CORE-SPEC-01] GyroSI: Architecture and Principles.md  🔒 [CORE-SPEC-02] GyroSI: Foundations (Core Mechanics).md  🔒 [CORE-SPEC-03] GyroSI: Architecture Mapping (this shows our general architectural and naming styling)  🔒 [CORE-SPEC-04] GyroSI: Language & Grammar [PRIORITY=100 — DO NOT OVERRIDE].md  🔒 [CORE-SPEC-05] GyroSI: Baby ML Structure.md  🔒 [CORE-SPEC-06] GyroSI: Baby ML Interface Definitions.md  🔒 [CORE-SPEC-07] GyroSI: Baseline Implementation Specifications.md  🔒 [CORE-SPEC-08] GyroSI: Operational Walkthrough.md
extensions/: __init__.py  base.py  ext_cryptographer.py  ext_phase_controller.py  ext_resonance_processor.py  ext_state_helper.py
guides/: Alignment.md  Codebase.md  Genetics.md  New_Specs.md  OSS_inf.md  Old_Specs.md  Physics.md  Specs.md
guides/docs/: harmony.md
guides/others/: Directives.md  Genetics_Legacy.md  IMPLEMENTATION_SUMMARY.md  Notes_1.md  Notes_2.md  TODO_CRITICAL_FIXES.md  TODO_LEB128_INTEGRATION.md  TODO_REFACTOR.md  challenge_speech.md  changes_10.md  changes_11.md  changes_12.md  changes_13.md  changes_9.md  context_11.md  context_12.md  context_13.md  context_14.md  context_2.md  context_3.md  context_cs.md  todo_4.md  todo_5.md  todo_6.md  todo_7.md  todo_8.md  todo_9.txt
gyro_si/: gyro_comm.py
gyro_si/g1_gyroalignment/: genetic_memory.py  gyro_tensor.py
gyro_si/g2_gyroinformation/: epigenetic_memory.py  runner.py
gyro_si/g3_gyroinference/: structural_memory.py
gyro_si/g4_gyrointelligence_in/: somatic_memory.py
gyro_si/g6_gyrocirculation/: runner.py  types.py
gyro_si/gyro_gcr/: gyro_config.py
gyro_si/gyro_si/: gyro_comm.py  gyro_constants.py  gyro_errors.py
gyro_tools/: build_operator_matrix.py  gyro_cli.py  gyro_integrity_check.py  gyro_knowledge_manager.py  gyro_session_manager.py
gyro_tools/cli/: config.py  interactive.py
kernel/: bootstrap.py  chat_oss.py  gyro_head.py
kernel/codecs/: gyrowt.py
kernel/gpt_oss/: __init__.py
memories/: memory_preferences.json
memories/test_rebuild/: registry.json
memories/test_registry/: registry.json
memory/agency/: g1_memory.py  g2_memory.py  g3_memory.py  g4_memory.py  g5_memory.py
s1_governance/: __init__.py
s2_information/: .gitignore  __init__.py  s2_manifest.json  s2_manifest.py
s3_inference/: g1_inference.py  g2_inference.py  g3_inference.py
s4_intelligence/: g1_intelligence_in.py  g2_intelligence_eg.py
s4_intelligence/g2_intelligence_eg.py/: g2_intelligence_eg_backup.py
scripts/: build_app.py  convert_svg_to_png.py  dev.py  genesis.py  migrate_to_mechanical.py  replay_bootstrap.py  verify_crypto_integration.py
scripts/tests/: test_gyrosi.py  test_message_store.py
src/: __init__.py  gyro_api.py  main.py
src/core/: alignment_nav.py  extension_manager.py  g1.py  g5.py  gyro_api.py  gyro_core.py  gyro_errors.py  gyro_tag_parser.py  log_decoder.py
src/extensions/: __init__.py  base.py  ext_api_gateway.py  ext_bloom_filter.py  ext_coset_knowledge.py  ext_cryptographer.py  ext_dynamic_codec.py  ext_error_handler.py  ext_event_classifier.py  ext_fork_manager.py  ext_language_egress.py  ext_multi_resolution.py  ext_navigation_helper.py  ext_performance_tracker.py  ext_phase_controller.py  ext_resonance_processor.py  ext_spin_piv.py  ext_state_helper.py  ext_storage_manager.py  ext_system_monitor.py
tests/: __init__.py  conftest.py  src_core_test.py  test_integration_complete.py
tools/: chat_transformers_cpu.py  check_sep_coverage.py  rebuild_safetensors_from_chunks.py  sep_for_prompt.py  test_multi_knowledge.py  test_tokenizer_only.py  test_transformers_cpu.py  tool_g1_alignment.py  verify_gyro_conversion.py
toys/: baby_tests.py  minimal_test.py  probe_candidates.py  test_agent_interaction.py  test_external_adapter.py
(+287 files in other folders)
