[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gyro-si"
version = "0.1.0"
description = "GyroSuperintelligence (GyroSI) - A structurally recursive form of intelligence"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
    {name = "GyroSI Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "blake3>=0.3.1",
    "aiofiles>=23.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
    "cupy-cuda11x>=11.0.0; platform_system!='Darwin'",
    "cupy-cuda12x>=12.0.0; platform_system!='Darwin' and python_version>='3.10'",
]
ui = [
    "flet>=0.19.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
full = [
    "gyro-si[gpu,ui,dev]",
]

[project.scripts]
gyro-si = "g6_gyrocirculation.runner:cli"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
gyro_si = [
    "patterns/gyro_g1/v*/*",
    "transitions/gyro_g1/v*/*",
    "g3_gyroinference/ona/interface/assets/*",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["gyro_si"]
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cupy.*",
    "torch.*",
    "flet.*",
    "blake3.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \\"not slow\\"')",
    "gpu: marks tests that require GPU",
    "ui: marks tests that require UI components",
]

[tool.coverage.run]
source = ["gyro_si"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/g6_gyrocirculation/runner.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false 